feat: workflow engine, governance, durable state and REST API
The engine is the deterministic control plane: it decides what runs, in
what order, how often, and when a human is required. No model output
influences any of those decisions. Ready tasks execute concurrently on
virtual threads, since agent work is almost entirely waiting on an API
or a subprocess.

Validation failure triggers re-planning rather than a retry. The
workspace is rolled back to its verified snapshot first, so the repair
agent proposes against the code as written rather than against a
half-working previous attempt, and the remaining graph is replaced with
repair -> apply -> validate -> approve. A retry would re-run the same
node against unchanged inputs and get the same answer.

Approval sits after validation rather than in front of every step:
asking a human to sign off on intermediate artifacts produces
rubber-stamping, because there is no basis on which to judge them.
Operator and approver are separate roles so the gate needs a second
party by construction.

Workflow state is checkpointed to H2 after every batch, with lineage in
an append-only table. A task recorded as RUNNING at crash time is reset
to PENDING rather than assumed complete - its side effects are unknown,
and assuming completion is how recovery silently skips work.

All four scenario tests pass end to end against real workspaces and real
Gradle builds: greenfield, brownfield, ambiguous with re-planning, and
rejection with verified rollback. 20 tests green.

Three bugs found and fixed by these tests: snapshots read binary files
as UTF-8 and choked on the wrapper jar; fixture selection matched the
accumulated prompt, so the seeded repository's own text misrouted a
brownfield run to the greenfield fixture; and path policy was rooted at
the shared workspaces directory rather than per run.